# Sugarland-APP

./: .gitattributes  .gitignore  README.md  SugarLand_20 (excel to manager).xlsx  build.bat  build.sh  dump_project.py  index.html  old_AuctionDetailPage.txt  old_AuctionDetailPage_utf8.txt  package-lock.json  package.json  start_dev.bat  tailwind.config.js  tmp_read_excel.cjs  tmp_read_excel.js  tsc_log.txt  tsconfig.tsbuildinfo  updater.json  vite.config.ts  ТЗ_Sugarland_Block4_Unassign_DetailDialog_ImportFix.md
.github/workflows/: build.yml
ref/: 2. Overstock Product Liquidation Sugar Land 114 - 121 (CSV файл).csv  отчет Хайбид.xlsx  сводный отчет Хайбид.xlsx
ref/new/: Overstock Product Liquidation Sugar Land 0218 - 0225 (2).csv  Sugarland_25 min prices.xlsx  Sugarland_25.csv
scripts/: generate-updater.js
src/: index.css  main.tsx
src-tauri/: Cargo.toml  fix_db.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auctions.rs  csv_parser.rs  db.rs  hibid.rs  main.rs  nlp.rs  pallet_manifests.rs  pricing.rs  reconciliation.rs
src/components/auctions/: CreateAuctionDialog.tsx
src/components/inventory/: InventoryItemDetailDialog.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  UpdateGuard.tsx
src/components/ui/: badge.tsx  (+6 more)
src/lib/: api.ts  auctionNaming.ts  managerReport.ts  utils.ts
src/pages/: AuctionDetailPage.tsx  AuctionsPage.tsx  DashboardPage.tsx  ImportPage.tsx  InventoryPage.tsx  PaletsPage.tsx  ReconciliationPage.tsx  ReportsPage.tsx  SettingsPage.tsx
src/types/: index.ts
